--- a/lab4/README
+++ b/lab4/README
@@ -1,2 +1,2 @@
-
-java ­jar webgoat.jar ­httpPort 8090
+Nayantara Prem, 998698351, tara.prem@mail.utoronto.ca
+Tahia Khan, 998897216, tahia.khan@mail.utoronto.ca
